--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ html, body {
   margin: 0;
 }
 body {
-  display: flex;
+  /* display: flex; */
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
