--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -28,4 +28,12 @@
         font-size: 3rem;
         color: white;
     }
+
+    &__about {
+        color: white;
+        width: 50%;
+        background-color: #0000003b;
+        padding: 2rem;
+        border-radius: 2rem;
+    }
 }
