--- a/src/pages/Jobs/Jobs.scss
+++ b/src/pages/Jobs/Jobs.scss
@@ -7,6 +7,11 @@
     h1 {
         text-align: center;
     }
+
+    &__tag {
+        font-size: 1.7rem;
+        text-align: center;
+    }
 }
 .jobs {
     margin: 2rem;
@@ -17,6 +22,7 @@
     &__section {
         margin-bottom: 2rem;
     }
+
     &__paragraph {
         margin-bottom: 1rem;
     }
@@ -71,5 +77,8 @@
     &__description a {
         display: flex;
         justify-content: center;
+    }
+    &__description p {
+        padding: 0;
     }
 }
